force-app/main/default/objects/mcdm_15__ScheduledSend__c/mcdm_15__ScheduledSend__c.object-meta.xml
<CustomObject>
    <description>The record for a scheduled send.</description>
    <label>MCDM Scheduled Send</label>
    <nameField>
        <displayFormat>DMSS-{000000}</displayFormat>
        <label>MCDM Scheduled Send</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Scheduled Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>