force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__Bulk_Send_Job__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Bulk_Send_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked bulk send job if this is a scheduled bulk send</description>
    <label>Bulk Send Job</label>
    <referenceTo>mcdm_15__Bulk_Send_Job__c</referenceTo>
    <relationshipLabel>MCDM Scheduled Bulk Send</relationshipLabel>
    <relationshipName>MCDM_ScheduledSend_BulK_Send</relationshipName>
    <type>Lookup</type>
</CustomField>