force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__External_Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__External_Journey_Id__c</fullName>
    <description>External ID of the linked journey for this schedule send</description>
    <label>External Journey Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>