force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is true if there is error in schedule sending.</description>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>