force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__HasError__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__HasError__c</fullName>
    <description>Is true if there is error in schedule sending or Bulk Send Job.</description>
    <formula>mcdm_15__Has_Errors__c || mcdm_15__Bulk_Send_Job__r.mcdm_15__Has_Errors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>