force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__MessageType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__MessageType__c</fullName>
    <description>Type of message for this scheduled send</description>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>