force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__Queueable_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Queueable_Job_Id__c</fullName>
    <description>Associated ID of the queueable apex job for this scheduled send</description>
    <label>Queueable Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>