force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__Quick_Send_Journey__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Quick_Send_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated quick send journey that this schedule send was created from.</description>
    <label>Quick Send Message</label>
    <referenceTo>mcdm_15__QuickSendJourney__c</referenceTo>
    <relationshipLabel>Scheduled Send</relationshipLabel>
    <relationshipName>Scheduled_Send</relationshipName>
    <type>Lookup</type>
</CustomField>