force-app/main/default/objects/mcdm_15__ScheduledSend__c/fields/mcdm_15__Status__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Status__c</fullName>
    <description>The status of this scheduled send.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>